# CardioMAS

./: .env.example  .gitignore  AGENTIC_RAG_ALIGNMENT_PLAN.md  AGENTIC_RAG_PLAN.md  AGENTS.md  AUTONOMOUS_TOOLING_PLAN.md  CHANGELOG.md  CLAUDE.md  DYNAMIC_DATASET_CODEGEN_PLAN.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_V4.md  LICENSE  LLM_CODEGEN_PLAN.md  OLLAMA_INTEGRATION_PLAN.md  ORGANIZATION_STRUCTURE.md  README.md  SCRIPT_FIRST_PLAN.md  TODO_V2.md  architecture.md  main.py  new_paln.md  orchestrator.py  pyproject.toml  requirements.txt  todo.md  todo_16042025.md
.github/workflows/: ci.yml  publish.yml
agents/: base_agent.py  extract_agent.py  scrape_agent.py  writer_agent.py
docs/: per_agent_knowledge_plan.md
examples/: examples.sh
examples/agentic_rag_demo/: README.md  notes.md  runtime.yaml
examples/ollama/: ptbxl_code_only.yaml  ptbxl_gemma4_26b.yaml  ptbxl_qwen3_thinking.yaml  ptbxl_react.yaml  runtime_local.yaml  runtime_ptbxl.yaml
examples/ptbxl/: corpus_manifest.json  organization_config_ptbxl.yaml  ptbxl_runtime.yaml
examples/tiny_ecg_dataset/: README.md  metadata.csv  organization_config.yaml
graph/: graph.py  nodes.py  state.py
output/: electrocardiography_wikipedia_20260410_143302.md  linux_ollama_20260410_145111.md  linux_ollama_20260410_150145.md  physionet_20260410_143821.md  ptb_xl_a_large_publicly_available_electrocardiogra_20260410_143629.md  ptb_xl_a_large_publicly_available_electrocardiogra_20260410_150059.md
src/cardiomas/: __init__.py  api.py  config.py  llm_factory.py  recorder.py  verbose.py
src/cardiomas/agentic/: __init__.py  aggregator.py  answer_grader.py  executor.py  planner.py  query_decomposer.py  react_agent.py  react_planner.py  responder.py  retrieval_grader.py  router.py  runtime.py
src/cardiomas/agents/: __init__.py  analysis.py  approval_gate.py  base.py  coder.py  data_engineer.py  discovery.py  ecg_stats.py  (+8 more)
tests/: test_autonomy.py  test_cli.py  test_cli_fresh.py  test_coding_department.py  test_config.py  test_corpus.py  test_data_engineer.py  test_executor.py  test_knowledge_department.py  test_llm_coder.py  test_loaders.py  test_ollama_integration.py  test_organization.py  test_react_agent.py  test_runtime.py  test_security.py  test_splitters.py  test_v2.py  test_v4_approval.py  test_v4_schemas.py  test_v4_tools.py
(+120 files in other folders)
