[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiomas"
dynamic = ["version"]
description = "CardioMAS — Cardio Multi-Agent System for reproducible ECG dataset splits"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Vajira Thambawita", email = "vajira@simula.no"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["ecg", "cardiology", "multi-agent", "dataset", "splits", "reproducibility"]

dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-ollama>=0.2",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "huggingface-hub>=0.24",
    "datasets>=2.0",
    "wfdb>=4.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "h5py>=3.10",
    "requests>=2.31",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "pypdf>=4.0",
]

[project.optional-dependencies]
cloud = ["langchain-openai>=0.2", "langchain-anthropic>=0.3"]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4", "mypy>=1.10", "pre-commit>=3.7"]

[project.scripts]
cardiomas = "cardiomas.cli.main:app"

[project.urls]
Homepage = "https://github.com/vlbthambawita/CardioMAS"
Repository = "https://github.com/vlbthambawita/CardioMAS"
Issues = "https://github.com/vlbthambawita/CardioMAS/issues"
"HuggingFace Dataset" = "https://huggingface.co/datasets/vlbthambawita/ECGBench"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
